--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     text-decoration: none;
 }
 
@@ -27,4 +28,35 @@ header{
 header a{
     color: #eee;
     margin-right: 40px;
+    font-weight: 300;
+}
+
+.container{
+    height: 100vh;
+    width: 100vw;
+    margin-top: -50px;
+    overflow: hidden;
+}
+
+.container .list .list-item{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.container .list .list-item img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    filter: brightness(50%);
+}
+
+.container .list .list-item .content{
+    position: absolute;
+    top: 20%;
+    right: 10%;
+    padding-right: 30%;
+    width: 80%;
+    color: #eee;
+    text-shadow: 0 5px 10px #0004;
 }
