--- a/style.css
+++ b/style.css
@@ -60,3 +60,30 @@ header a{
     color: #eee;
     text-shadow: 0 5px 10px #0004;
 }
+
+.container .list .list-item .title{
+    font-size: 5em;
+    font-weight: 700;
+    line-height: 1.3em;
+}
+
+.container .list .list-item .description{
+    font-size: 1.5em;
+}
+
+.container .list .list-item .buttons{
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    grid-template-rows: 50px;
+    margin-top: 20px;
+    gap: 5px;
+}
+
+.container .list .list-item .buttons button{
+    border: none;
+    background-color: #eee;
+    letter-spacing: 3px;
+    font-weight: 500;
+    cursor: pointer;
+    text-transform: uppercase;
+}
