--- a/style.css
+++ b/style.css
@@ -159,3 +159,28 @@ header a{
     color: #000;
     transition: 0.7s;
 }
+
+/* MOVIMENTO DA THUMB */
+
+.container.next .thumb{
+    animation: effectNextThumb 0.5s linear 1 forwards;
+}
+
+@keyframes effectNextThumb {
+    from{
+        transform: translateX(150px);
+    }
+}
+
+/* MOVIMENTO DO THUMB */
+
+.container.next .thumb .thumb-item:nth-last-child(1){
+    animation: effectLastThumb 0.5s linear 1 forwards;
+}
+
+@keyframes effectLastThumb {
+    from{
+        width: 0;
+        opacity: 0;
+    }
+}
