--- a/style.css
+++ b/style.css
@@ -172,8 +172,6 @@ header a{
     }
 }
 
-/* MOVIMENTO DO THUMB */
-
 .container.next .thumb .thumb-item:nth-last-child(1){
     animation: effectLastThumb 0.5s linear 1 forwards;
 }
@@ -182,5 +180,24 @@ header a{
     from{
         width: 0;
         opacity: 0;
+    }
+}
+
+/* TEXTOS PRINCIPAIS */
+
+.container .list .thumb-item:nth-last-child(1) .content .title,
+.container .list .thumb-item:nth-last-child(1) .content .description,
+.container .list .thumb-item:nth-last-child(1) .content .buttons{
+    transform: translateY(50px);
+    filter: blur(20px);
+    opacity: 0;
+    animation: showContent 0.5s 1s linear 1 forwards;
+}
+
+@keyframes showContent {
+    to{
+        transform: translateY(0);
+        filter: blur(0);
+        opacity: 1;
     }
 }
