--- a/style.css
+++ b/style.css
@@ -201,3 +201,15 @@ header a{
         opacity: 1;
     }
 }
+
+.container .list .list-item:nth-last-child(1) .content .title{
+    animation-delay: 1.2s;
+}
+
+.container .list .list-item:nth-last-child(1) .content .description{
+    animation-delay: 1.6s;
+}
+
+.container .list .list-item:nth-last-child(1) .content .buttons{
+    animation-delay: 2s;
+}
