--- a/style.css
+++ b/style.css
@@ -213,3 +213,23 @@ header a{
 .container .list .list-item:nth-last-child(1) .content .buttons{
     animation-delay: 2s;
 }
+
+.container.next .list .list-item:nth-last-child(1) img{
+    width: 150px;
+    height: 220px;
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    border-radius: 30px;
+    animation: showMainImage 0.5s linear 1 forwards;
+}
+
+@keyframes showMainImage {
+    to{
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
