--- a/style.css
+++ b/style.css
@@ -214,7 +214,31 @@ header a{
     animation-delay: 2s;
 }
 
+/* IMAGEM PRINCIPAL NEXT */
+
 .container.next .list .list-item:nth-last-child(1) img{
+    width: 150px;
+    height: 220px;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    border-radius: 30px;
+    animation: showMainImage 0.5s linear 1 forwards;
+}
+
+@keyframes showMainImage {
+    to{
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
+
+/* IMAGEM PRINCIPAL BACK */
+
+.container.back .list .list-item:nth-child(1) img{
     width: 150px;
     height: 220px;
     position: absolute;
