--- a/style.css
+++ b/style.css
@@ -239,21 +239,18 @@ header a{
 /* IMAGEM PRINCIPAL BACK */
 
 .container.back .list .list-item:nth-child(1) img{
-    width: 150px;
-    height: 220px;
     position: absolute;
-    bottom: 50px;
-    left: 50%;
-    border-radius: 30px;
-    animation: showMainImage 0.5s linear 1 forwards;
+    bottom: 0;
+    left: 0;
+    animation: hideMainImage 0.5s linear 1 forwards;
 }
 
-@keyframes showMainImage {
+@keyframes hideMainImage {
     to{
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 0;
+        bottom: 50px;
+        left: 50%;
+        width: 135px;
+        height: 200px;
+        border-radius: 10px;
     }
 }
