--- a/style.css
+++ b/style.css
@@ -243,6 +243,7 @@ header a{
     bottom: 0;
     left: 0;
     animation: hideMainImage 0.5s linear 1 forwards;
+    z-index: 2;
 }
 
 @keyframes hideMainImage {
